Fixed Uneven Padding

--- a/src/style.css
+++ b/src/style.css
@@ -155,14 +155,6 @@ form,
 	width: 100%;
 }
 
-form {
-	padding-right: 0.75rem;
-}
-
-.benchmark-results {
-	padding-left: 0.75rem;
-}
-
 section {
 	background-color: var(--card);
 	border: 0.5px solid var(--border);
@@ -279,7 +271,7 @@ tbody th {
 
 .grid-2 {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
 	gap: 0.75rem;
 }
 
